# cython-package-example

./: .bumpversion.cfg  LICENSE.txt  MANIFEST.in  Makefile  README.md  build.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
src/cypack/: answer.pyx  fibonacci.pyx  utils.pxd  utils.pyx
src/cypack/sub/: helper.c  helper.h  helper.pxd  wrong.pyx
tests/: test_basics.py  test_data.py
