[tool.poetry]
name = "cython-package-example"
version = "0.1.5-poetry"
description = "Example of a package with Cython extensions"
authors = ["Federico Stra <stra.federico@gmail.com>"]
license = "MIT"
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Mathematics",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: C",
	"Programming Language :: Cython",
]
packages = [
	{ include = "cypack", from = "src" },
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
Cython = "^0.29.27"
pytest = "^7.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=0.29.27", "setuptools>=60.8.1"]
build-backend = "poetry.core.masonry.api"
