[metadata]
name = cython-package-example
version = 0.1.3
description = Example of a package with Cython extensions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Federico Stra
author_email = stra.federico@gmail.com
url = https://github.com/FedericoStra/cython-package-example
download_urls = https://pypi.org/project/cython-package-example
project_urls =
	Documentation = https://github.com/FedericoStra/cython-package-example
	Code = https://github.com/FedericoStra/cython-package-example
	Issue tracker = https://github.com/FedericoStra/cython-package-example/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*
